--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pakisa Fuel Voucher</title>
+  <title>Pakisa Fuel Voucher - Debug</title>
   <script src="https://unpkg.com/@supabase/supabase-js"></script>
   <style>
     body { font-family: Arial, sans-serif; padding: 24px; background: #f5f6f8; }
     h1 { color: #072760; }
-    form { background: #fff; padding: 20px; border-radius: 8px; max-width: 400px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); }
-    label { display:block; margin-top:10px; font-weight:bold; }
     select, input, button { width:100%; padding:8px; margin-top:5px; }
-    button { background: #0F99DA; color:white; border:none; cursor:pointer; margin-top:15px; }
-    button:hover { background: #072760; }
+    button { background:#0F99DA; color:white; border:none; cursor:pointer; margin-top:15px; }
+    button:hover { background:#072760; }
     #status { margin-top:15px; font-weight:bold; }
+    pre { background:#eee; padding:10px; border-radius:6px; margin-top:10px; white-space:pre-wrap; }
   </style>
 </head>
 <body>
-  <h1>Pakisa Fuel Voucher</h1>
+  <h1>Pakisa Fuel Voucher - Debug</h1>
 
   <form id="voucherForm">
     <label for="driver">Driver:</label>
@@ -38,46 +37,72 @@
 
   <p id="status"></p>
 
+  <h3>Debug Info</h3>
+  <pre id="debug"></pre>
+
   <script>
-    // ----------------- SUPABASE CONFIG -----------------
     const SUPABASE_URL = "https://sfvoptdderulwrpdywmb.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNmdm9wdGRkZXJ1bHdycGR5d21iIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgxNzY4NjAsImV4cCI6MjA3Mzc1Mjg2MH0.bHy_aZ9TOGLfanG6-xNb3HykxwpWAiUNOcfBbvN-OME";
     const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-    // ----------------- LOAD DROPDOWNS -----------------
-    async function loadDriversAndVehicles() {
-      // Fetch drivers
-      const { data: drivers, error: driversError } = await supabase.from("drivers").select("*");
-      const driverSelect = document.getElementById("driver");
-      driverSelect.innerHTML = "";
-      if (driversError || !drivers || drivers.length === 0) {
-        driverSelect.innerHTML = `<option value="">⚠️ No drivers found</option>`;
-      } else {
-        drivers.forEach(d => {
-          const option = document.createElement("option");
-          option.value = d.id;
-          option.textContent = `${d.name} (${d.phone})`;
-          driverSelect.appendChild(option);
-        });
-      }
+    const dbg = (label, value) => {
+      console.log(label, value);
+      const pre = document.getElementById("debug");
+      pre.textContent += `${label}: ${JSON.stringify(value,null,2)}\n`;
+    };
 
-      // Fetch vehicles
-      const { data: vehicles, error: vehiclesError } = await supabase.from("vehicles").select("*");
-      const vehicleSelect = document.getElementById("vehicle");
-      vehicleSelect.innerHTML = "";
-      if (vehiclesError || !vehicles || vehicles.length === 0) {
-        vehicleSelect.innerHTML = `<option value="">⚠️ No vehicles found</option>`;
-      } else {
-        vehicles.forEach(v => {
-          const option = document.createElement("option");
-          option.value = v.id;
-          option.textContent = v.registration || v.reg_number;
-          vehicleSelect.appendChild(option);
-        });
+    async function loadDriversAndVehicles() {
+      try {
+        // Fetch drivers
+        dbg("Fetching drivers...", null);
+        const { data: drivers, error: driversError } = await supabase
+          .from("drivers")
+          .select("*")
+          .limit(10);
+        dbg("driversError", driversError);
+        dbg("drivers", drivers);
+
+        const driverSelect = document.getElementById("driver");
+        driverSelect.innerHTML = "";
+        if (driversError || !drivers || drivers.length === 0) {
+          driverSelect.innerHTML = `<option value="">⚠️ No drivers found</option>`;
+        } else {
+          drivers.forEach(d => {
+            const option = document.createElement("option");
+            option.value = d.id;
+            option.textContent = `${d.name} (${d.phone})`;
+            driverSelect.appendChild(option);
+          });
+        }
+
+        // Fetch vehicles
+        dbg("Fetching vehicles...", null);
+        const { data: vehicles, error: vehiclesError } = await supabase
+          .from("vehicles")
+          .select("*")
+          .limit(10);
+        dbg("vehiclesError", vehiclesError);
+        dbg("vehicles", vehicles);
+
+        const vehicleSelect = document.getElementById("vehicle");
+        vehicleSelect.innerHTML = "";
+        if (vehiclesError || !vehicles || vehicles.length === 0) {
+          vehicleSelect.innerHTML = `<option value="">⚠️ No vehicles found</option>`;
+        } else {
+          vehicles.forEach(v => {
+            const option = document.createElement("option");
+            option.value = v.id;
+            option.textContent = v.registration || v.reg_number;
+            vehicleSelect.appendChild(option);
+          });
+        }
+
+      } catch (err) {
+        dbg("loadDriversAndVehicles error", err);
+        document.getElementById("status").innerText = "❌ Error loading data - check console";
       }
     }
 
-    // ----------------- FORM SUBMIT -----------------
     document.getElementById("voucherForm").addEventListener("submit", async (e) => {
       e.preventDefault();
       const driver = document.getElementById("driver").value;
@@ -89,14 +114,13 @@
         return;
       }
 
-      // Insert voucher
       const { error } = await supabase.from("fuel_vouchers").insert([
         { driver_id: driver, vehicle_id: vehicle, amount_rand: amount }
       ]);
 
       if (error) {
         document.getElementById("status").innerText = "❌ Error: " + error.message;
-        console.error(error);
+        dbg("Insert error", error);
         return;
       }
 
@@ -104,7 +128,6 @@
       document.getElementById("voucherForm").reset();
     });
 
-    // Load data immediately
     loadDriversAndVehicles();
   </script>
 </body>
